[gd_scene load_steps=8 format=2]

[ext_resource path="res://shared/ship_subsystems/shield/shield.gd" type="Script" id=1]
[ext_resource path="res://shared/ship_subsystems/shield/shield_area.gd" type="Script" id=2]

[sub_resource type="Shader" id=1]
code = "shader_type canvas_item;

const vec4 shield_color = vec4(0.2,0.2,0.9,1.0);
void fragment(){
	float dist_ratio = distance(UV,vec2(0.5,0.5))*2.0;
	dist_ratio = pow(dist_ratio,30);
	if(dist_ratio > 1.0){
		COLOR.a = 0.0;
	}else{
		COLOR = shield_color*dist_ratio;
	}
	}"

[sub_resource type="ShaderMaterial" id=2]
shader = SubResource( 1 )

[sub_resource type="OpenSimplexNoise" id=3]

[sub_resource type="NoiseTexture" id=4]
width = 1
height = 1
noise = SubResource( 3 )

[sub_resource type="CircleShape2D" id=5]

[node name="shield" type="Node2D" groups=[
"health",
]]
script = ExtResource( 1 )

[node name="shader_base" type="Sprite" parent="."]
material = SubResource( 2 )
texture = SubResource( 4 )

[node name="shield_area" type="Area2D" parent="." groups=[
"health",
]]
collision_layer = 2147483712
collision_mask = 64
script = ExtResource( 2 )

[node name="collision_circle" type="CollisionShape2D" parent="shield_area"]
shape = SubResource( 5 )
